Avoid overspill

--- a/src/assets/sass/modules/_forms-base.scss
+++ b/src/assets/sass/modules/_forms-base.scss
@@ -176,6 +176,7 @@ select {
     padding-inline-end: 1.30769230769231em; // 17px / 13px
     background: var(--color-background-form) url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 4'%3E%3Cpolygon fill='%23777' points='3.5,4 0,0 7,0'/%3E%3C/svg%3E") right center no-repeat;
     background-size: 1em 0.30769230769231em;
+    text-overflow: ellipsis;
     text-transform: none;
 
     &:hover {
