--- a/src/assets/sass/modules/_layout-shared.scss
+++ b/src/assets/sass/modules/_layout-shared.scss
@@ -724,7 +724,7 @@ span.spinner {
 
 .txp-form-field-label,
 .txp-form-field-value {
-    max-width: 31em; // 408px / 13px
+    max-width: 30em; // 390px / 13px
 }
 
 /**
